rename files to match '-' pattern, and non model classes to english

--- a/client/index.html
+++ b/client/index.html
@@ -3,18 +3,16 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Negociações</title>
+    <title>My App</title>
     <link rel="stylesheet" href="css/bootstrap.css">
     <link rel="stylesheet" href="css/bootstrap-theme.css">
-    <script src="js/app/polyfill/es6.js"></script>
-
 </head>
 
 <body class="container">
 
-    <h1 class="text-center">Negociações</h1>
+    <h1 class="text-center">My App</h1>
 
-    <div id="mensagemView"></div>
+    <div id="messageView"></div>
 
     <form class="form">
 
@@ -44,7 +42,7 @@
     <br>
     <br>
 
-    <div id="negociacoesView"></div>
+    <div id="mainView"></div>
     <script src="node_modules/systemjs/dist/system.js"></script>
     <script>
         System.defaultJSExtensions = true;
